<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/music"
    android:padding="@dimen/_10sdp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aladin"
        android:drawableLeft="@drawable/queue_music"
        android:text="@string/my_playlist"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"/>

    <androidx.cardview.widget.CardView
        android:onClick="songClicked"
        android:id="@+id/cdAnnie"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/annie_marie_2002"
            android:gravity="center_vertical"
            android:textSize="@dimen/_15ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="#284154"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:onClick="songClicked"
        android:id="@+id/cdMaroon"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/maroon5_memories"
            android:gravity="center_vertical"
            android:textSize="@dimen/_15ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="#284154"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:onClick="songClicked"
        android:id="@+id/cdDualipa"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dua_lipa_new_rules"
            android:gravity="center_vertical"
            android:textSize="@dimen/_15ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="#284154"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:onClick="songClicked"
        android:id="@+id/cdAriana"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ariana_grande_positions"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textColor="#284154"
            android:textSize="@dimen/_15ssp"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:onClick="songClicked"
        android:id="@+id/cdAustin"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_gravity="center"
        android:backgroundTint="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/austin_mahone_send_it"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="#284154"
            />

    </androidx.cardview.widget.CardView>


</LinearLayout>